# EmbedClaw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md  TODO.md  TODO_ZH.md  partitions.csv  sdkconfig.defaults.esp32s3
components/embed_claw/: CMakeLists.txt  ec_config.h  ec_config_internal.h  embed_claw.c  embed_claw.h
components/embed_claw/channel/: ec_channel_feishu.c  ec_channel_qq.c  ec_channel_reg.inc  ec_channel_ws.c
components/embed_claw/core/: ec_agent.c  ec_agent.h  ec_channel.c  ec_channel.h  ec_channel_rule.h  ec_memory.c  ec_memory.h  ec_session.c  ec_session.h  ec_skill_loader.c  ec_skill_loader.h  ec_tools.c  ec_tools.h  ec_tools_reg_rule.h
components/embed_claw/llm/: ec_llm.c  ec_llm.h  ec_llm_internal.h  ec_llm_openai.c  ec_llm_openai.h
components/embed_claw/test/: README.md
components/embed_claw/test/channel/: test_channel_contract.c  test_channel_feishu.c  test_channel_qq.c  test_channel_ws.c
components/embed_claw/test/core/: test_agent_contract.c  test_skill_loader_contract.c
components/embed_claw/test/llm/: test_llm_contract.c
components/embed_claw/test/support/: ec_test_agent.c  ec_test_channel_feishu.c  ec_test_channel_qq.c  ec_test_channel_ws.c  ec_test_hooks.h  ec_test_llm_openai.c  ec_test_tools_files.c  ec_test_tools_get_time.c  ec_test_tools_gpio.c  ec_test_tools_web_search.c
components/embed_claw/test/tools/: test_tool_cron.c  test_tool_files.c  test_tool_gpio.c  test_tool_web_search.c  test_tools_contract.c
components/embed_claw/tools/: ec_tools_reg.inc  tools_cron.c  tools_files.c  tools_get_time.c  tools_gpio.c  tools_web_search.c
main/: CMakeLists.txt  embedclaw_config.h  idf_component.yml  main.c  wifi_connect.cpp  wifi_connect.h
(+5 files in other folders)
