idf_component_register(
    SRC_DIRS
        "."
        "core"
        "llm"
        "tools"
        "channel"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_http_client
        esp_http_server
        esp_netif
        esp_timer
        freertos
        json
        mbedtls
        nvs_flash
        spiffs
        esp_websocket_client
)
